refactor connection pool & add sql where querying